# playground-chatbot

./: .env.example  .gitignore  Containerfile  README.md  config.yml  pyproject.toml
facts/: .gitkeep  company-incident-response-protocol.md  deployment-environments.md  devops-services-catalog.md
skills/: .gitkeep  check-service-health.md  investigate-pipeline-failures.md  monitor-critical-alerts.md
skills/check-service-health/: api-gateway.md  auth-service.md  postgres-primary.md
src/playground_chatbot/: __init__.py  agents.py  cli.py  config.py  prompts.py
src/playground_chatbot/local_agents/: __init__.py
src/playground_chatbot/local_agents/toolbox/: __init__.py  agent.py  models.py  prompts.py  tools.py
static/: index.html
