[project]
name = "playground-chatbot"
version = "0.1.0"
description = "Playground for Agents"
requires-python = ">=3.12"

dependencies = [
    "macsdk",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "simpleeval>=0.9.13",
]

[tool.uv.sources]
macsdk = { path = "../macsdk", editable = true }


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
playground-chatbot = "playground_chatbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playground_chatbot"]
